--- a/11 MAR 2025/studentcr/studentcrud/src/main/resources/templates/student/create.html
+++ b/11 MAR 2025/studentcr/studentcrud/src/main/resources/templates/student/create.html
@@ -5,24 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Student</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-image: url('/images/image.png');
+            background-repeat: no-repeat;
+            background-size: 100%, 100%;
+
+        }
+    </style>
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="w-50">
-            <h1 class="mt-5 text-center">Create Student</h1>
+            <h1 class="mt-5 text-center"style="color:black;"><b>Create Student</b></h1>
             <form th:action="@{/users/save}" th:object="${student}" method="post" class="mt-3">
                 <div class="form-group">
-                    <label for="studentName">Name</label>
+                    <label for="studentName"style="color:black;"><b>Name</b></label>
                     <input type="text" class="form-control" id="studentName" th:field="*{name}" placeholder="Enter student name">
                 </div>
                 <div class="form-group">
-                    <label for="studentEmail">Email</label>
+                    <label for="studentEmail"style="color:black;"><b>Email</b></label>
                     <input type="email" class="form-control" id="studentEmail" th:field="*{email}" placeholder="Enter student email">
                 </div>
                 <div class="form-group">
-                    <label for="studentAge">Phone</label>
+                    <label for="studentPhone"style="color:black;"><b>Phone</b></label>
                     <input type="number" class="form-control" id="studentPhone" th:field="*{phone}" placeholder="Enter student Phone">
                 </div>
+                <div class="form-group">
+                     <label for="studentAdress"style="color:black;"><b>Adress</b></label>
+                     <input type="text" class="form-control" id="studentAdress" th:field="*{adress}" placeholder="Enter student Adress">
+                </div>
+                <div class="form-check">
+                    <label for="studentAge"style="color:black;"><b>Gender</b></label><br>
+                    <input class="form-check-input" type="radio" name="gender" id="gridRadios1" value="male" th:field="*{gender}">
+                    <label class="form-check-label" for="gridRadios1">
+                     Male
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="female" th:field="*{gender}">
+                    <label class="form-check-label" for="gridRadios2">
+                      Female
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="others" th:field="*{gender}">
+                    <label class="form-check-label" for="gridRadios2">
+                      Others
+                    </label>
+                </div>
+                <div>
+                     <label for="DOB"style="color:black;"><b>Date Of Birth</b></label>
+                     <input type="date" class="form-control" id="studentDob" th:field="*{dob}" placeholder="Enter student Dob">
+                </div>
+                <div>
+                     <label for="File"style="color:black;"><b>File</b></label>
+                     <input type="file" class="form-control" id="studentfile" th:field="*{file}" placeholder="Enter student file">
+                </div>
+  <div class="form-group">
+    <label for="Language"style="color:black;"><b>Language</b></label><br>
+    <input type="checkbox" id="subject1" name="subject1" value="HTML" th:field="*{Language}">
+    <label for="Language">HTML</label><br>
+    <input type="checkbox" id="subject2" name="subject2" value="CSS" th:field="*{Language}">
+    <label for="Language"> CSS</label><br>
+    <input type="checkbox" id="subject3" name="subject3" value="JAVA" th:field="*{Language}">
+    <label for="Language"> JAVA</label>
+          </div>
+<div class="form-group">
+    <label for="section"style="color:black;"><b>Section</b></label><br>
+    <select id="section" name="section">
+        <option value="A">A</option>
+        <option value="B">B</option>
+        <option value="C">C</option>
+        <option value="D">D</option>
+    </select><br>
+          </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </form>
         </div>
